--- a/next.clayui.com/src/styles/site/_site.scss
+++ b/next.clayui.com/src/styles/site/_site.scss
@@ -3,6 +3,7 @@ body {
 	font-size: 1rem;
 }
 
+.language-text,
 .gatsby-code-text {
 	background-color: #ffd6cc;
 	color: initial;
